# Piko

./: .readthedocs.yaml  Cargo.toml  Makefile  PACKAGING.md  PKGBUILD  README.md  install.sh  piko.spec  update-aur.sh
.github/workflows/: build_deb.yml  release-aur.yml  release.yml  rust.yml  test.yml
config/: COLOR_SCHEMES.md  README.md  border_config.toml  compact_config.toml  dark_config.toml  default_config.toml  pastel_config.toml  termux_config.toml
docs/: conf.py  configuration.md  configuration.rst  index.md  index.rst  installation.md  installation.rst  usage.md  usage.rst
docs/source/: conf.py  index.rst
scripts/: build-packages.sh  publish-copr.sh
src/: config.rs  distro_logo.rs  main.rs  output.rs  system_info.rs  test_config.rs
